<resources>
    <string name="app_name">Foody</string>
    <string name="phienban">Phiên bản</string>
    <string name="dangtai">Đang tải ...</string>
    <string name="tencongty">Foody</string>
    <string name="email">Email</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="dangnhap">Đăng Nhập</string>
    <string name="hoac">Hoặc</string>
    <string name="quenmatkhau">Quên mật khẩu ?</string>
    <string name="dangki">Đăng kí</string>
    <string name="nhaplaimk">Nhập lại mật khẩu</string>
    <string name="emailempty">Email không được để trống</string>
    <string name="emailwrong">Nhập địa chỉ email hợp lệ</string>
    <string name="matkhauempty">Mật khẩu không được để trống</string>
    <string name="matkhaunhaplaiempty">Mật khẩu nhập lại không được để trống</string>
    <string name="matkhaunhapnotequal">Mật khẩu nhập lại không trùng khớp</string>
    <string name="matkhaungan">Mật khẩu không được ngắn hơn 6 kí tự</string>
    <string name="dangkithanhcong">Đăng kí thành công</string>
    <string name="dangxuli">Đang xử lí</string>
    <string name="dangnhapthatbai">Đăng nhập thất bại</string>
    <string name="khoiphucmatkhau">Khôi phục mật khẩu</string>
    <string name="chuoikhoiphucmatkhau">Vui lòng nhập địa chỉ email vào khung bên dưới để khôi phục mật khẩu</string>
    <string name="khoiphuc">Khôi phục</string>
    <string name="khongphaithanhvien">Bạn không phải là thành viên ? </string>
    <string name="thongbaoguiemailthanhcong">Gửi email thành công</string>
    <string name="angi">Ăn gì</string>
    <string name="odau">Ở đâu</string>
    <string name="moinhat">Mới nhất</string>
    <string name="danhmuc">Danh mục</string>
    <string name="khuvuc">Khu vực</string>
    <string name="gantoi">Gần tôi</string>
    <string name="giaohang">Giao hàng</string>
    <string name="gameandfun">Game and fun</string>
    <string name="danhgia">Đánh giá</string>
    <string name="blogs">Blogs</string>
    <string name="topmember">Top thành viên</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="datmon">Đặt món</string>
    <string name="showmore"> Show more</string>
    <string name="showless"> Show less</string>
    <string name="thich">Thích</string>
    <string name="binhluan">Bình luận</string>
    <string name="mayanh">Máy ảnh</string>
    <string name="vitri">Check-in</string>
    <string name="chise">Chia sẻ</string>
    <string name="taianh">Tải ảnh</string>
    <string name="luulai">Lưu lại</string>
    <string name="dongcua">Đã đóng cửa</string>
    <string name="mocua">Đang mở cửa</string>
    <string name="chitietbinhluan">Chi tiết bình luận</string>
    <string name="nhaptenwifi">Nhập tên wifi</string>
    <string name="nhapmatkhauwifi">Nhập mật khẩu wifi</string>
    <string name="dang">Post</string>
    <string name="themwifithanhcong">Thêm Wifi thành công</string>
    <string name="themwifi"><font color="#030bfc">"Thêm mật khẩu Wifi"</font></string>
    <string name="tieudebinhluan">Tiêu đề (không bắt buộc)</string>
    <string name="noidungbinhluan">Viết trên 100 từ, đúng chính tả, ngôn từ văn hóa, không spam... để được duyệt điểm thưởng</string>
    <string name="vietbinhluan">Viết bình luận</string>
    <string name="done"><font color="#030bfc">"Xong"</font></string>
    <string name="thucdon">Thực đơn</string>
</resources>