<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrounddangnhap"
    android:gravity="center"
    tools:context=".View.QuenMatKhauActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparentBackgroudDangNhap">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="false"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="false"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingRight="30dp">

                <TextView
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:text="@string/khoiphucmatkhau"
                    android:textColor="@color/colorAccent"
                    android:textSize="35sp" />
                <TextView
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:text="@string/chuoikhoiphucmatkhau"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />



                <EditText

                    android:id="@+id/edEmailKhoiPhuc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:backgroundTint="@color/colorAccent"
                    android:drawableLeft="@drawable/ic_email_white_24dp"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent" />


                <Button
                    android:id="@+id/btnKhoiPhuc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/radius_button"
                    android:drawableLeft="@drawable/ic_exit_to_app_white_24dp"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/colorPrimaryDark"
                    android:paddingLeft="60dp"
                    android:paddingRight="60dp"
                    android:text="@string/khoiphuc"
                    android:textColor="@color/colorPrimaryDark" />


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/khongphaithanhvien"
                        android:textColor="@color/colorAccent" />

                    <TextView
                        android:id="@+id/txtDangKiMoi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/dangki"
                        android:textAlignment="textEnd"
                        android:textColor="@color/colorAccent" />
                </LinearLayout>


            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</RelativeLayout>