<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/chitietbinhluan"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/containerBinhLuan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/cicleImageUser"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/backgrounddangnhap"
                    app:civ_border_color="@color/colorAccent"
                    app:civ_border_width="2dp" />


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView

                        android:id="@+id/txtTieuDeBinhLuan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="GoGi House"
                        android:textStyle="bold" />

                    <com.borjabravo.readmoretextview.ReadMoreTextView
                        android:id="@+id/txtNoiDungBinhLuan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="GoGi House"
                        app:colorClickableText="@color/colorPrimaryDark"
                        app:trimCollapsedText="@string/showmore"
                        app:trimExpandedText="@string/showless"
                        app:trimLines="3"
                        app:trimMode="trimModeLine" />

                </LinearLayout>

                <TextView
                    android:id="@+id/txtDiemBinhLuan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="8.5" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewHinhBinhLuan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>
